namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jgarcia
  labels:
    app: webapp
