app.yaml
# App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  selector:
    matchLabels:
      app: webapp
      tier: frontend
  replicas: 7
  template:
    metadata:
      labels:
        app: webapp
        tier: frontend
    spec:
      containers:
        - name: php-apache
          image: joanrgg/webapp:v3
          imagePullPolicy: Always
---
# App Service
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: webapp
    tier: frontend
