mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-mysql-svc
  labels:
    app: webapp
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: webapp
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-mysql
  labels:
    app: webapp
spec:
  selector:
    matchLabels:
      app: webapp
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webapp
        tier: mysql
    spec:
      containers:
        - name: mysql
          image: joanrgg/mysql-br
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
              
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
