ingress.yaml
# Create ingress to service webapp - app.jgarcia.dev
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.jgarcia.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
